INT-17019: Fix for content align issue in Page resource for Snap

--- a/scss/_core.scss
+++ b/scss/_core.scss
@@ -419,6 +419,11 @@ li.modtype_page {
             padding-right: 25%;
             width: 100%;
         }
+
+        #pagemod-content-container,
+        .d-block {
+            float: left;
+        }
     }
 }
 
